# IndyDualArm_SDK

./: CMakeLists.txt  README.md
codegen/: codegen_setup.py
codegen/FD_grt_rtw/: CMakeLists.txt  FD.c  FD.h  FD_552be714_1_asm_delegate.c  FD_552be714_1_asserts.c  FD_552be714_1_checkDynamics.c  FD_552be714_1_compOutputs.c  FD_552be714_1_gateway.h  FD_552be714_1_geometries.c  FD_552be714_1_mode_zero_crossings.c  FD_552be714_1_setParameters.c  FD_cd27307_1_asserts.c  FD_cd27307_1_deriv.c  FD_cd27307_1_gateway.c  FD_cd27307_1_geometries.h  FD_cd27307_1_mode_zero_crossings.c  FD_cd27307_1_setParameters.c  FD_cd27307_1_sim_delegate.c  FD_data.c  FD_private.h  FD_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetNaN.c  rt_nonfinite.h  rtmodel.h  rtwtypeschksum.mat  ssc_ml_fun.h
codegen/FD_nom_grt_rtw/: CMakeLists.txt  FD_nom.h  FD_nom_552be714_1.h  FD_nom_552be714_1_checkDynamics.c  FD_nom_552be714_1_create.c  FD_nom_552be714_1_gateway.c  FD_nom_552be714_1_gateway.h  FD_nom_552be714_1_geometries.c  FD_nom_552be714_1_geometries.h  FD_nom_552be714_1_logging.c  FD_nom_552be714_1_mode_zero_crossings.c  FD_nom_552be714_1_sim_delegate.c  FD_nom_private.h  FD_nom_types.h  builtin_typeid_types.h  codedescriptor.dmr  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  ssc_ml_fun.h
codegen/FK_grt_rtw/: CMakeLists.txt  FK.c  FK.h  FK_private.h  builtin_typeid_types.h  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetNaN.c  rt_nonfinite.c  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
codegen/FK_grt_rtw/tmwinternal/: simulink_cache.xml
codegen/HinfController_grt_rtw/: CMakeLists.txt  HinfController.h  HinfController_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  compileInfo.mat  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat
codegen/ID_grt_rtw/: CMakeLists.txt  ID.c  ID.h  ID_data.c  ID_private.h  ID_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat
codegen/ID_nom_grt_rtw/: CMakeLists.txt  ID_nom.h  builtin_typeid_types.h  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypeschksum.mat
codegen/JSTraj_grt_rtw/: CMakeLists.txt  JSTraj.h  JSTraj_private.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rt_nonfinite.h  rtwtypeschksum.mat
codegen/TSTraj_grt_rtw/: CMakeLists.txt  TSTraj.c  TSTraj.h  TSTraj_data.c  TSTraj_private.h  TSTraj_types.h  buildInfo.mat  builtin_typeid_types.h  compileInfo.mat  rtGetInf.c  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  rtwtypeschksum.mat
codegen/TaskSpaceController_grt_rtw/: CMakeLists.txt  TaskSpaceController.c  TaskSpaceController.h  TaskSpaceController_private.h  builtin_typeid_types.h  codedescriptor.dmr  multiword_types.h  rtGetInf.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw
doc/: Doxyfile
doc/html/: _formulas.tex  _indy_dual_arm_8hpp_source.html  _robot_8h_source.html  annotated.html  class_indy_dual_arm-members.html  class_indy_dual_arm.html  class_indy_dual_arm__coll__graph.map  class_indy_dual_arm__coll__graph.md5  class_robot-members.html  class_robot.html  classes.html  codegen_2_f_d__grt__rtw_2_f_d_8h_source.html  codegen_2_f_d__grt__rtw_2_f_d__cd27307__1_8h_source.html  codegen_2_f_d__grt__rtw_2_f_d__cd27307__1__gateway_8h_source.html  codegen_2_f_d__grt__rtw_2_f_d__cd27307__1__geometries_8h_source.html  codegen_2_f_d__grt__rtw_2_f_d__private_8h_source.html  codegen_2_f_d__grt__rtw_2_f_d__types_8h_source.html  codegen_2_f_d__grt__rtw_2builtin__typeid__types_8h_source.html  codegen_2_f_d__grt__rtw_2multiword__types_8h_source.html  codegen_2_f_d__grt__rtw_2rt__matrixlib_8h_source.html  codegen_2_f_d__grt__rtw_2rt__nonfinite_8h_source.html  codegen_2_f_d__grt__rtw_2rt_get_na_n_8h_source.html  codegen_2_f_d__grt__rtw_2rtmodel_8h_source.html  codegen_2_f_d__grt__rtw_2rtwtypes_8h_source.html  (+1107 more)
doc/latex/: annotated.tex  refman.tex  (+435 more)
examples/: CMakeLists.txt  Robot.cpp  Robot.h  main.cpp  sim_ctx.hpp  type.h
examples/indy7/: axis.urdf  axis_100mm.urdf  body.urdf  indy7.urdf  indy7_dualArm.urdf  indy7_dualArm_vis.urdf  indy7_floating_fixed.urdf  indy7_visual_floating.urdf  line_1mm.urdf  satellite.urdf  sphere_1cm.urdf  sphere_1mm.urdf
examples/indy7/meshes/: dual_arm_body.stl
examples/indy7/meshes/slprj/sim/varcache/indy7_dualArm/: checksumOfCache.mat
examples/indy7/meshes/slprj/sim/varcache/indy7_dualArm/tmwinternal/: simulink_cache.xml
examples/indy7/slprj/_cgxe/indy7_dualArm/: indy7_dualArm_Cache.mat
examples/indy7/slprj/_cgxe/indy7_dualArm/src/: indy7_dualArm_cgxe.c  indy7_dualArm_cgxe.gmk  indy7_dualArm_cgxe.h  indy7_dualArm_cgxe.mol  rtwtypeschksum.mat
examples/indy7/slprj/_cprj/: m_T6MwjqiGx6loI7k5o1vVhG.mat  m_TCGSFIrmgTrdrXjldiS8GC.h  m_TCGSFIrmgTrdrXjldiS8GC.mat
examples/indy7/slprj/sim/varcache/indy7_dualArm/: checksumOfCache.mat
examples/indy7/slprj/sim/varcache/indy7_dualArm/tmwinternal/: simulink_cache.xml
include/: IndyDualArm.hpp
slx/: FD.slx  FD.slxc  FD_cgxe.mexw64  FD_nom.slxc  FK.slx  FK.slxc  FKLocalPOE.m  FK_cgxe.mexw64  HinfController.slx  HinfController.slxc  ID.slx  ID.slxc  ID_nom.slxc  JSTraj.slx  JSTraj.slx.r2024a  JSTraj.slxc  README.m  TSTraj.slx  TSTraj.slxc  TaskSpaceController.slx  TaskSpaceController.slxc  TaskSpaceController_faultInfo.xml  code_generation.m  getDualArmLambdaList.asv  getDualArmLambdaList.m  indy7_dualArm.slx  indy7_dualArm.slx.autosave  indy7_dualArm.slxc  indy7_dualArm1.slx.autosave  indy7_dualArm_cgxe.mexw64  start_code_gen.sh  untitled3.m
slx/ID_grt_rtw/: CMakeLists.txt  ID.c  ID.h  ID_data.c  ID_private.h  ID_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
slx/ID_grt_rtw/tmwinternal/: simulink_cache.xml
src/: IndyDualArm.cpp
(+740 files in other folders)
